re PR fortran/25018 (Segfault with simple expression)

2005-12-18  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/25018
	*expr.c(check_inquiry): Return FAILURE if there is no symtree to
	provide a name. Error/warning for assumed character length argument
	to LEN for an initialization expression, using GFC_GNU_STD. Add an
	argument to flag that the expression is not restricted.
	(check_init_expr): Improve the message for a failing variable.
	(gfc_match_init_expr): Call check_enquiry again to make sure that
	unsimplified expressions are not causing unnecessary errors.

2005-12-18  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/25018
	*gfortran.dg/initialization_1.f90: New test.
	*gfortran.dg/enum_5.f90: Change dg-error to new message.
	*gfortran.dg/g77/980616-0.f: The same.

From-SVN: r108753